--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@300;600&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: rgb(121, 121, 192);
+    font-family: 'Gemunu Libre', sans-serif;
+    font-size: 45px;
+}
 main{
-    padding: 3rem;
+    padding: 10%;
 }
 h1{
     padding: 1rem 0;
@@ -21,11 +27,24 @@ h1{
     padding: 1rem 0;
     flex-direction: column;
 }
-input{
-    display: flexbox;
-    width: 300px;
+.codificar input {
+    display: block;
+    width: 30%;
+    height: 50px;
     
 }
+
+.decodificar input{
+    display: block;
+    width: 30%;
+    height: 50px;
+    
+}
+/*.decodificar input{
+    display: flex;
+    width: 20px;
+    height: 50px;
+}*/
 .textoCodificado{
     display: flex;
     background-color: blue;
@@ -35,10 +54,28 @@ input{
 .nuevoDivCodificador{
     padding: 1rem 0;
 }
+div{
+    gap: 15px;
+}
+.divResultado{
 
-@media only screen and (min-width:768px) {
+    display: flex;
+    width: 90%;
+    height: 90%;
+    background-color: rgb(64, 147, 153);
+    padding: 2rem;
+    color: white;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+       
+}
+
+@media only screen and (min-width:890px) {
     
-   
+   main{
+    padding: 5%;
+   }
     .tabla{
         display: flex;
         padding: 1rem;
@@ -83,17 +120,21 @@ input{
         flex-direction: row;
         display: flexbox;
         
-        gap: 26px;
+        gap: 33px;
     }
     .codificar{
         display: flex;
         padding: 1rem 0;
         flex-direction: column;
     }
-    input{
+    .codifcar input{
         display: flexbox;
         width: 500px;
         
+    }
+    .decodificar input{
+        display: flexbox;
+        width: 500px; 
     }
     .avanzar{
         width: 50px;
@@ -105,5 +146,23 @@ input{
         color: white;
         justify-content: center;
 
+    }
+    .divResultado{
+
+        display: flex;
+        width: 90%;
+        height: 90%;
+        background-color: rgb(64, 147, 153);
+        padding: 2rem;
+        color: white;
+        align-items: center;
+        align-self: center;
+        justify-content: center;
+
+        
+    }
+
+    div{
+        gap: 20px;
     }
 }
